--- a/charts/celeborn/templates/master/service.yaml
+++ b/charts/celeborn/templates/master/service.yaml
@@ -18,13 +18,12 @@ limitations under the License.
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "celeborn.masterServiceName" . }}
+  name: {{ include "celeborn.master.serviceName" . }}
   labels:
-    {{- include "celeborn.labels" . | nindent 4 }}
+    {{- include "celeborn.master.labels" . | nindent 4 }}
 spec:
   selector:
-    {{- include "celeborn.selectorLabels" . | nindent 4 }}
-    app.kubernetes.io/role: master
+    {{- include "celeborn.master.selectorLabels" . | nindent 4 }}
   ports:
   - port: {{ .Values.service.port }}
     targetPort: {{ .Values.service.port }}
